--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,15 +1,4 @@
-include pyproject.toml
-
-# Include the README
-include *.md
-
-# Include the license file
-include LICENSE.txt
-
-# Include setup.py
-include setup.py
-
-# Include the data files
-recursive-include data *include versioneer.py
-include yeat/_version.py
 include versioneer.py
+include yeat/_version.py
+include yeat/Snakefile
+recursive-include yeat/test/data/ *
