--- a/environment.yml
+++ b/environment.yml
@@ -4,14 +4,14 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - black
-    - fastp
-    - fastqc
-    - gzip
-    - mash
-    - pytest-cov
-    - quast
-    - seqtk
-    - snakemake
-    - spades
-    - versioneer
+    - black>=21.10b0
+    - fastp>=0.23.1
+    - fastqc>=0.11.9
+    - gzip>=1.7
+    - mash>=2.3
+    - pytest-cov>=3.0.0
+    - quast>=5.0.2
+    - seqtk>=1.3
+    - snakemake>=6.10.0
+    - spades>=3.15.3
+    - versioneer>=0.21
