--- a/environment.yml
+++ b/environment.yml
@@ -4,14 +4,14 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - black>=21.10b0
-    - fastp>=0.23.1
-    - fastqc>=0.11.9
+    - black=21.10b0
+    - fastp>=0.23
+    - fastqc>=0.11
     - gzip>=1.7
     - mash>=2.3
-    - pytest-cov>=3.0.0
-    - quast>=5.0.2
+    - pytest-cov>=3.0
+    - quast>=5.0
     - seqtk>=1.3
-    - snakemake>=6.10.0
-    - spades>=3.15.3
+    - snakemake>=6.10
+    - spades>=3.15
     - versioneer>=0.21
