--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -4,33 +4,35 @@ import pandas as pd
 from pkg_resources import resource_filename
 
 
-out_dir = config["outdir"]
-analysis_dir = os.path.dirname(f"{out_dir}/analysis/")
-seq_input_dir = os.path.dirname(f"{out_dir}/seq/input/")
-os.makedirs(analysis_dir, exist_ok=True)
-os.makedirs(seq_input_dir, exist_ok=True)
-sample = config["sample"]
-copyfile(config["read1"], f"{seq_input_dir}/{sample}_R1.fq.gz")
-copyfile(config["read2"], f"{seq_input_dir}/{sample}_R2.fq.gz")
-
-
 rule all:
     input:
-        expand(out_dir + "/analysis/quast/{sample}/report.html", sample=config["sample"])
+        expand("analysis/quast/{sample}/report.html", sample=config["sample"])
+
+
+rule copyinput:
+    output:
+        read1="seq/input/{sample}_R1.fq.gz",
+        read2="seq/input/{sample}_R2.fq.gz"
+    input:
+        read1=config["read1"],
+        read2=config["read2"]
+    run:
+        copyfile(input.read1, output.read1)
+        copyfile(input.read2, output.read2)
 
 
 rule fastp:
     output:
-        out1=out_dir + "/seq/fastp/{sample}.R1.fq.gz",
-        out2=out_dir + "/seq/fastp/{sample}.R2.fq.gz",
+        out1="seq/fastp/{sample}.R1.fq.gz",
+        out2="seq/fastp/{sample}.R2.fq.gz",
     input:
-        read1=seq_input_dir + "/{sample}_R1.fq.gz",
-        read2=seq_input_dir + "/{sample}_R2.fq.gz"
+        read1="seq/input/{sample}_R1.fq.gz",
+        read2="seq/input/{sample}_R2.fq.gz"
     shell:
         """
         fastp -i {input.read1} -I {input.read2} -o {output.out1} -O {output.out2} \
-            --html {out_dir}/seq/fastp/fastp.html --json {out_dir}/seq/fastp/fastp.json \
-                2> {out_dir}/seq/fastp/report.txt
+            --html seq/fastp/fastp.html --json seq/fastp/fastp.json \
+            2> seq/fastp/report.txt
         """
 
 
@@ -39,10 +41,10 @@ rule fastp:
 
 rule mash:
     output:
-        sketch=out_dir + "/seq/mash/{sample}.R1.fq.gz.msh",
-        mash_report=out_dir + "/seq/mash/{sample}.report.tsv"
+        sketch="seq/mash/{sample}.R1.fq.gz.msh",
+        mash_report="seq/mash/{sample}.report.tsv"
     input:
-        read1=rules.fastp.output[0]
+        read1=rules.fastp.output.out1
     shell:
         """
         mash sketch {input.read1} -o {output.sketch}
@@ -52,12 +54,12 @@ rule mash:
 
 rule downsample:
     output:
-        sub1=out_dir + "/seq/downsample/{sample}.R1.fq.gz",
-        sub2=out_dir + "/seq/downsample/{sample}.R2.fq.gz",
+        sub1="seq/downsample/{sample}.R1.fq.gz",
+        sub2="seq/downsample/{sample}.R2.fq.gz",
     input:
-        read1=out_dir + "/seq/fastp/{sample}.R1.fq.gz",
-        read2=out_dir + "/seq/fastp/{sample}.R2.fq.gz",
-        mash_report=out_dir + "/seq/mash/{sample}.report.tsv"
+        read1="seq/fastp/{sample}.R1.fq.gz",
+        read2="seq/fastp/{sample}.R2.fq.gz",
+        mash_report="seq/mash/{sample}.report.tsv"
     run:
         result = input.mash_report
         df = pd.read_csv(result, sep="\t")
@@ -67,31 +69,31 @@ rule downsample:
         down = (genome_size * 150) // (2 * read_length)
         print(f"genome size: {genome_size}")
         print(f"down: {down}")
-        shell("seqtk sample {input.read1} {down} > {out_dir}/seq/downsample/{wildcards.sample}.R1.fq")
-        shell("seqtk sample {input.read2} {down} > {out_dir}/seq/downsample/{wildcards.sample}.R2.fq")
-        shell("gzip -f {out_dir}/seq/downsample/*")
+        shell("seqtk sample {input.read1} {down} > seq/downsample/{wildcards.sample}.R1.fq")
+        shell("seqtk sample {input.read2} {down} > seq/downsample/{wildcards.sample}.R2.fq")
+        shell("gzip -f seq/downsample/*")
 
-    
+
 rule spades:
     output:
-        contigs=out_dir + "/analysis/spades/{sample}/contigs.fasta",
-        scaffolds=out_dir + "/analysis/spades/{sample}/scaffolds.fasta",
+        contigs="analysis/spades/{sample}/contigs.fasta",
+        scaffolds="analysis/spades/{sample}/scaffolds.fasta",
     input:
-        read1=out_dir + "/seq/downsample/{sample}.R1.fq.gz",
-        read2=out_dir + "/seq/downsample/{sample}.R2.fq.gz",
+        read1="seq/downsample/{sample}.R1.fq.gz",
+        read2="seq/downsample/{sample}.R2.fq.gz",
     threads: 8
     shell:
         """
-        spades.py -1 {input.read1} -2 {input.read2} -o {out_dir}/analysis/spades/{wildcards.sample}
+        spades.py -1 {input.read1} -2 {input.read2} -o analysis/spades/{wildcards.sample}
         """
 
 
 rule quast:
     output:
-        report=out_dir + "/analysis/quast/{sample}/report.html",
+        report="analysis/quast/{sample}/report.html",
     input:
-        scaffold=out_dir + "/analysis/spades/{sample}/scaffolds.fasta",
+        scaffold="analysis/spades/{sample}/scaffolds.fasta",
     shell:
         """
-        quast.py {input.scaffold} -o {out_dir}/analysis/quast/{wildcards.sample}
+        quast.py {input.scaffold} -o analysis/quast/{wildcards.sample}
         """
