--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -13,9 +13,8 @@ import pandas as pd
 
 rule all:
     input:
-        if config["algorithm"] == "spades":
-            expand("analysis/quast/{sample}/report.html", sample=config["sample"]),
-        expand("seq/fastqc/{sample}_{reads}_fastqc.html", sample=config["sample"], reads=["R1", "R2"])
+        expand("seq/fastqc/{sample}_{reads}_fastqc.html", sample=config["sample"], reads=["R1", "R2"]),
+        expand("analysis/quast/{assembly}/{sample}_report.html", assembly=config["assembly"], sample=config["sample"])
 
 
 rule copyinput:
@@ -47,7 +46,7 @@ rule fastqc:
 rule fastp:
     output:
         out1="seq/fastp/{sample}.R1.fq.gz",
-        out2="seq/fastp/{sample}.R2.fq.gz",
+        out2="seq/fastp/{sample}.R2.fq.gz"
     input:
         read1="seq/input/{sample}_R1.fq.gz",
         read2="seq/input/{sample}_R2.fq.gz"
@@ -64,7 +63,7 @@ rule mash:
         sketch="seq/mash/{sample}.R1.fq.gz.msh",
         mash_report="seq/mash/{sample}.report.tsv"
     input:
-        read1=rules.fastp.output.out1
+        read1="seq/fastp/{sample}.R1.fq.gz"
     shell:
         """
         mash sketch {input.read1} -o {output.sketch}
@@ -75,7 +74,7 @@ rule mash:
 rule downsample:
     output:
         sub1="seq/downsample/{sample}.R1.fq.gz",
-        sub2="seq/downsample/{sample}.R2.fq.gz",
+        sub2="seq/downsample/{sample}.R2.fq.gz"
     input:
         read1="seq/fastp/{sample}.R1.fq.gz",
         read2="seq/fastp/{sample}.R2.fq.gz",
@@ -96,36 +95,35 @@ rule downsample:
 
 rule spades:
     output:
-        contigs="analysis/spades/{sample}/contigs.fasta",
-        scaffolds="analysis/spades/{sample}/scaffolds.fasta",
+        contigs="analysis/spades/{sample}_contigs.fasta"
     input:
         read1="seq/downsample/{sample}.R1.fq.gz",
-        read2="seq/downsample/{sample}.R2.fq.gz",
+        read2="seq/downsample/{sample}.R2.fq.gz"
     threads: 8
-    shell: "spades.py -1 {input.read1} -2 {input.read2} -o analysis/spades/{wildcards.sample}"
+    run:
+        shell("spades.py -1 {input.read1} -2 {input.read2} -t {threads} -o analysis/spades")
+        shell("mv analysis/spades/scaffolds.fasta {output.contigs}")
 
 
 rule megahit:
     output:
-        contigs="analysis/megahit/{sample}/final.contigs.fa"
+        contigs="analysis/megahit/{sample}_contigs.fasta"
     input:
         read1="seq/downsample/{sample}.R1.fq.gz",
         read2="seq/downsample/{sample}.R2.fq.gz",
     threads: 8
-    shell: "megahit -1 {input.read1} -2 {input.read2} -o analysis/megahit/{wildcards.sample}"
+    run:
+        shell("rm -r analysis")
+        shell("mkdir analysis")
+        shell("megahit -1 {input.read1} -2 {input.read2} -t {threads} -o analysis/megahit/")
+        shell("mv analysis/megahit/final.contigs.fa {output.contigs}")
 
 
-rule spades_quast:
+rule quast:
     output:
-        report="analysis/quast/{sample}/report.html",
+        report="analysis/quast/{assembly}/{sample}_report.html"
     input:
-        scaffold="analysis/spades/{sample}/scaffolds.fasta",
-    shell: "quast.py {input.scaffold} -o analysis/quast/{wildcards.sample}"
-
-
-rule megahit_quast:
-    output:
-        report="analysis/quast/{sample}/report.html",
-    input:
-        scaffold="analysis/megahit/{sample}/scaffolds.fasta",
-    shell: "quast.py {input.scaffold} -o analysis/quast/{wildcards.sample}"
+        contigs="analysis/{assembly}/{sample}_contigs.fasta"
+    run:
+        shell("quast.py {input.contigs} -o analysis/quast/{wildcards.assembly}")
+        shell("mv analysis/quast/{wildcards.assembly}/report.html {output.report}")
