--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -13,7 +13,7 @@ import pandas as pd
 
 rule all:
     input:
-        expand("analysis/quast/{sample}/report.html", sample=config["sample"]),
+        expand("analysis/quast/{assembler}/{sample}_report.html", assembler=config["assemblers"], sample=config["sample"]),
         expand("seq/fastqc/{sample}_{reads}_fastqc.html", sample=config["sample"], reads=["R1", "R2"])
 
 
@@ -36,7 +36,7 @@ rule fastqc:
     input:
         read1="seq/input/{sample}_R1.fq.gz",
         read2="seq/input/{sample}_R2.fq.gz"
-    threads: 2
+    threads: 128
     shell:
         """
         fastqc {input.read1} {input.read2} --threads {threads} -o seq/fastqc/
@@ -46,7 +46,7 @@ rule fastqc:
 rule fastp:
     output:
         out1="seq/fastp/{sample}.R1.fq.gz",
-        out2="seq/fastp/{sample}.R2.fq.gz",
+        out2="seq/fastp/{sample}.R2.fq.gz"
     input:
         read1="seq/input/{sample}_R1.fq.gz",
         read2="seq/input/{sample}_R2.fq.gz"
@@ -63,7 +63,7 @@ rule mash:
         sketch="seq/mash/{sample}.R1.fq.gz.msh",
         mash_report="seq/mash/{sample}.report.tsv"
     input:
-        read1=rules.fastp.output.out1
+        read1="seq/fastp/{sample}.R1.fq.gz"
     shell:
         """
         mash sketch {input.read1} -o {output.sketch}
@@ -74,7 +74,7 @@ rule mash:
 rule downsample:
     output:
         sub1="seq/downsample/{sample}.R1.fq.gz",
-        sub2="seq/downsample/{sample}.R2.fq.gz",
+        sub2="seq/downsample/{sample}.R2.fq.gz"
     input:
         read1="seq/fastp/{sample}.R1.fq.gz",
         read2="seq/fastp/{sample}.R2.fq.gz",
@@ -95,18 +95,41 @@ rule downsample:
 
 rule spades:
     output:
-        contigs="analysis/spades/{sample}/contigs.fasta",
-        scaffolds="analysis/spades/{sample}/scaffolds.fasta",
+        contigs="analysis/spades/{sample}_contigs.fasta"
+    input:
+        read1="seq/downsample/{sample}.R1.fq.gz",
+        read2="seq/downsample/{sample}.R2.fq.gz"
+    threads: 128
+    shell:
+        """
+        spades.py -1 {input.read1} -2 {input.read2} -t {threads} -o analysis/spades
+        ln -s scaffolds.fasta {output.contigs}
+        """
+
+
+rule megahit:
+    output:
+        contigs="analysis/megahit/{sample}_contigs.fasta"
     input:
         read1="seq/downsample/{sample}.R1.fq.gz",
         read2="seq/downsample/{sample}.R2.fq.gz",
-    threads: 8
-    shell: "spades.py -1 {input.read1} -2 {input.read2} -o analysis/spades/{wildcards.sample}"
+    threads: 128
+    shell:
+        """
+        megahit -1 {input.read1} -2 {input.read2} -t {threads} -o analysis/megahit-temp
+        mv analysis/megahit-temp/* analysis/megahit
+        rm -r analysis/megahit-temp
+        ln -s final.contigs.fa {output.contigs}
+        """
 
 
 rule quast:
     output:
-        report="analysis/quast/{sample}/report.html",
+        report="analysis/quast/{assembler}/{sample}_report.html"
     input:
-        scaffold="analysis/spades/{sample}/scaffolds.fasta",
-    shell: "quast.py {input.scaffold} -o analysis/quast/{wildcards.sample}"
+        contigs="analysis/{assembler}/{sample}_contigs.fasta"
+    shell:
+        """
+        quast.py {input.contigs} -o analysis/quast/{wildcards.assembler}
+        ln -s report.html {output.report}
+        """
