--- a/environment.yml
+++ b/environment.yml
@@ -9,9 +9,11 @@ dependencies:
     - fastqc>=0.11
     - gzip>=1.7
     - mash>=2.3
+    - megahit>=1.2
     - pytest-cov>=3.0
     - quast>=5.0
     - seqtk>=1.3
     - snakemake>=6.10
     - spades>=3.15
+    - unicycler>=0.4
     - versioneer>=0.21
