added suggestions; tests passing

--- a/yeat/tests/data/dup_algorithms.cfg
+++ b/yeat/tests/data/dup_algorithms.cfg
@@ -4,7 +4,7 @@
         "extra_args": ""
     },
     {
-        "algorithm": "megahit",
+        "algorithm": "spades",
         "extra_args": ""
     }
 ]
