--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -9,6 +9,7 @@
 
 from shutil import copyfile
 import pandas as pd
+from pathlib import Path
 
 
 rule all:
@@ -82,10 +83,16 @@ rule downsample:
     params:
         downsample=config["downsample"]
     run:
+        if params.downsample == -1:
+            p = Path("seq/downsample")
+            p.mkdir(parents=True, exist_ok=True)
+            copyfile(input.read1, output.sub1)
+            copyfile(input.read2, output.sub2)
+            return
         result = input.mash_report
         df = pd.read_csv(result, sep="\t")
         genome_size = df["Length"].iloc[0]
-        print(f"genome size: {genome_size}")
+        print(f"genome size: {genome_size}")    
         if params.downsample == 0:
             coverage = 150
             read_length = 250
