--- a/yeat/tests/data/config.cfg
+++ b/yeat/tests/data/config.cfg
@@ -1,10 +1,10 @@
 [
     {
         "algorithm": "spades",
-        "extra_args": ""
+        "extra_args": "--meta"
     },
     {
         "algorithm": "megahit",
-        "extra_args": ""
+        "extra_args": "--min-count 5 --min-contig-len 300"
     }
 ]
