--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -7,9 +7,11 @@
 # Development Center.
 # -------------------------------------------------------------------------------------------------
 
+import json
 from shutil import copyfile
 import pandas as pd
 from pathlib import Path
+from random import randint
 
 
 rule all:
@@ -81,7 +83,9 @@ rule downsample:
         read2="seq/fastp/{sample}.R2.fq.gz",
         mash_report="seq/mash/{sample}.report.tsv"
     params:
-        downsample=config["downsample"]
+        coverage=config["coverage"],
+        downsample=config["downsample"],
+        fastp_report="seq/fastp/fastp.json"
     run:
         if params.downsample == -1:
             p = Path("seq/downsample")
@@ -89,20 +93,25 @@ rule downsample:
             copyfile(input.read1, output.sub1)
             copyfile(input.read2, output.sub2)
             return
-        result = input.mash_report
-        df = pd.read_csv(result, sep="\t")
+        df = pd.read_csv(input.mash_report, sep="\t")
         genome_size = df["Length"].iloc[0]
-        print(f"genome size: {genome_size}")    
+        print(f"genome size: {genome_size}")
+        with open(params.fastp_report, "r") as fh:
+            qcdata = json.load(fh)
+        base_count = qcdata["summary"]["after_filtering"]["total_bases"]
+        read_count = qcdata["summary"]["after_filtering"]["total_reads"]
+        avg_read_length = base_count / read_count
         if params.downsample == 0:
-            coverage = 150
-            read_length = 250
-            down = (genome_size * coverage) // (2 * read_length)
-            print(f"auto down: {down}")
+            down = int((genome_size * params.coverage) / (2 * avg_read_length))
         else:
             down = params.downsample
-            print(f"custom down: {down}")
-        shell("seqtk sample {input.read1} {down} > seq/downsample/{wildcards.sample}.R1.fq")
-        shell("seqtk sample {input.read2} {down} > seq/downsample/{wildcards.sample}.R2.fq")
+        seed = randint(1, 2**16-1)
+        print(f"[yeat] average read length: {avg_read_length}")
+        print(f"[yeat] target depth of coverage: {params.coverage}x")
+        print(f"[yeat] number of reads to sample: {down}")
+        print(f"[yeat] random seed for sampling: {seed}")
+        shell("seqtk sample -s {seed} {input.read1} {down} > seq/downsample/{wildcards.sample}.R1.fq")
+        shell("seqtk sample -s {seed} {input.read2} {down} > seq/downsample/{wildcards.sample}.R2.fq")
         shell("gzip -f seq/downsample/*")
 
 
