--- a/environment.yml
+++ b/environment.yml
@@ -4,13 +4,14 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - black=21.10b0
+    - black=22.10
     - fastp>=0.23
     - fastqc>=0.11
     - gzip>=1.7
     - mash>=2.3
     - megahit>=1.2
     - pytest-cov>=3.0
+    - python>=3.9
     - quast>=5.0
     - seqtk>=1.3
     - snakemake>=6.10
