--- a/environment.yml
+++ b/environment.yml
@@ -5,13 +5,14 @@ channels:
     - defaults
 dependencies:
     - black=22.10
+    - click=8.0
     - fastp>=0.23
     - fastqc>=0.11
     - gzip>=1.7
     - mash>=2.3
     - megahit>=1.2
     - pytest-cov>=3.0
-    - python>=3.9
+    - python=3.9
     - quast>=5.0
     - seqtk>=1.3
     - snakemake>=6.10
