--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -86,6 +86,7 @@ rule downsample:
         coverage=config["coverage"],
         downsample=config["downsample"],
         fastp_report="seq/fastp/fastp.json",
+        genome_size=config["genomesize"],
         seed=config["seed"]
     run:
         if params.downsample == -1:
@@ -94,9 +95,11 @@ rule downsample:
             copyfile(input.read1, output.sub1)
             copyfile(input.read2, output.sub2)
             return
-        df = pd.read_csv(input.mash_report, sep="\t")
-        genome_size = df["Length"].iloc[0]
-        print(f"genome size: {genome_size}")
+        if params.genome_size == 0:
+            df = pd.read_csv(input.mash_report, sep="\t")
+            genome_size = df["Length"].iloc[0]
+        else:
+            genome_size = params.genome_size
         with open(params.fastp_report, "r") as fh:
             qcdata = json.load(fh)
         base_count = qcdata["summary"]["after_filtering"]["total_bases"]
@@ -110,6 +113,7 @@ rule downsample:
             seed = randint(1, 2**16-1)
         else:
             seed = params.seed
+        print(f"[yeat] genome size: {genome_size}")
         print(f"[yeat] average read length: {avg_read_length}")
         print(f"[yeat] target depth of coverage: {params.coverage}x")
         print(f"[yeat] number of reads to sample: {down}")
