cleaned up shell command

--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -27,19 +27,16 @@ rule copyinput:
     input:
         read1=config["read1"],
         read2=config["read2"]
-    params:
-        file1="seq/input/{sample}_R1.fq",
-        file2="seq/input/{sample}_R2.fq"
     run:
         if input.read1[-3:] == ".gz" and input.read2[-3:] == ".gz":
             copyfile(input.read1, output.read1)
             copyfile(input.read2, output.read2)
         elif input.read1[-3:] != ".gz" and input.read2[-3:] == ".gz":
-            shell("gzip {input.read1} > {params.file1}")
+            shell("gzip {input.read1} > {output.read1}")
             copyfile(input.read2, output.read2)
         elif input.read1[-3:] == ".gz" and input.read2[-3:] != ".gz":
             copyfile(input.read1, output.read1)
-            shell("gzip {input.read2} > {params.file2}")
+            shell("gzip {input.read2} > {output.read2}")
         else:
             copyfile(input.read1, params.file1)
             copyfile(input.read2, params.file2)
