saving work; still working on test

--- a/yeat/Snakefile
+++ b/yeat/Snakefile
@@ -28,18 +28,11 @@ rule copyinput:
         read1=config["read1"],
         read2=config["read2"]
     run:
-        if input.read1[-3:] == ".gz" and input.read2[-3:] == ".gz":
-            copyfile(input.read1, output.read1)
-            copyfile(input.read2, output.read2)
-        elif input.read1[-3:] != ".gz" and input.read2[-3:] == ".gz":
-            shell("gzip -c {input.read1} > {output.read1}")
-            copyfile(input.read2, output.read2)
-        elif input.read1[-3:] == ".gz" and input.read2[-3:] != ".gz":
-            copyfile(input.read1, output.read1)
-            shell("gzip -c {input.read2} > {output.read2}")
-        else:
-            shell("gzip -c {input.read1} > {output.read1}")
-            shell("gzip -c {input.read2} > {output.read2}")
+        for inreads, outreads in zip(input, output):
+            if inreads.endswith(".gz"):
+                copyfile(inreads, outreads)
+            else:
+                shell(f"gzip -c {inreads} > {outreads}")
 
 
 rule fastqc:
