--- a/environment.yml
+++ b/environment.yml
@@ -10,11 +10,13 @@ dependencies:
     - gzip>=1.7
     - mash>=2.3
     - megahit>=1.2
+    - pandas>=1.4
+    - pytest>=7.1
     - pytest-cov>=3.0
     - python=3.9
     - quast>=5.0
     - seqtk>=1.3
-    - snakemake>=6.10
+    - snakemake>=7.8
     - spades>=3.15
     - unicycler>=0.4
     - versioneer>=0.21
