--- a/yeat/bandage/Snakefile
+++ b/yeat/bandage/Snakefile
@@ -69,7 +69,7 @@ rule unicycler:
         "analysis/bandage/unicycler/.done"
     input:
         get_unicycler_graphic_files
-    run:x
+    run:
         for gfa in input:
             filename = Path(gfa).stem
             shell("Bandage image {gfa} analysis/bandage/unicycler/{filename}.jpg")
