--- a/yeat/bandage/Snakefile
+++ b/yeat/bandage/Snakefile
@@ -68,8 +68,8 @@ rule flye:
     output:
         "analysis/bandage/flye/.done"
     input:
-        glob("analysis/flye/30-contigger/*.gfa")
-        glob("analysis/flye/40-polishing/*.gfa")
+        glob("analysis/flye/30-contigger/*.gfa"),
+        glob("analysis/flye/40-polishing/*.gfa"),
         glob("analysis/flye/*.gfa")
     run:
         for gfa in input:
