--- a/yeat/bandage/Snakefile
+++ b/yeat/bandage/Snakefile
@@ -76,3 +76,15 @@ rule flye:
             filename = Path(gfa).stem
             shell("Bandage image {gfa} analysis/bandage/flye/{filename}.jpg")
         shell("touch {output[0]}")
+
+
+rule canu:
+    output:
+        "analysis/bandage/canu/.done"
+    input:
+        glob("analysis/canu/unitigging/4-unitigger/*.gfa")
+    run:
+        for gfa in input:
+            filename = Path(gfa).stem
+            shell("Bandage image {gfa} analysis/bandage/canu/{filename}.jpg")
+        shell("touch {output[0]}")
