--- a/yeat/tests/data/config.cfg
+++ b/yeat/tests/data/config.cfg
@@ -1,10 +1,31 @@
-[
-    {
-        "algorithm": "spades",
-        "extra_args": "--meta"
+{
+    "samples": {
+        "sample1": [
+            "/Users/dane.jo/Desktop/test1/data/short1.fq.gz",
+            "/Users/dane.jo/Desktop/test1/data/short2.fq.gz"
+        ],
+	"sample2": [
+            "/Users/dane.jo/Desktop/test1/data/short1.fq.gz",
+            "/Users/dane.jo/Desktop/test1/data/short2.fq.gz"
+        ]
     },
-    {
-        "algorithm": "megahit",
-        "extra_args": "--min-count 5 --min-contig-len 300"
-    }
-]
+    "assemblers": [
+        {
+            "label": "spades-meta",
+            "algorithm": "spades",
+            "extra_args": "--meta",
+            "samples": [
+                "sample1"
+            ]
+        },
+        {
+            "label": "megahit-mins",
+            "algorithm": "megahit",
+            "extra_args": "--min-count 5 --min-contig-len 300",
+            "samples": [
+                "sample1",
+		        "sample2"
+            ]
+        }
+    ]
+}
