--- a/yeat/tests/data/configs/oxford.cfg
+++ b/yeat/tests/data/configs/oxford.cfg
@@ -1,8 +1,8 @@
 {
     "samples": {
         "sample1": {
-            "pacbio-hifi": [
-                "yeat/tests/data/ecoli.fastq.gz"
+            "nano-hq": [
+                "yeat/tests/data/ecolk12mg1655_R10_3_guppy_345_HAC.fastq.gz"
             ]
         }
     },
@@ -10,7 +10,7 @@
         {
             "label": "canu-default",
             "algorithm": "canu",
-            "extra_args": "genomeSize=4.8m",
+            "extra_args": "genomeSize=4.8m maxInputCoverage=100",
             "samples": [
                 "sample1"
             ]
