Revert "Oxford nanopore (#47)"
This reverts commit 96da565310d73826fec99d065d2aa80e3ea64426.

--- a/yeat/tests/data/configs/flye_unicycler.cfg
+++ b/yeat/tests/data/configs/flye_unicycler.cfg
@@ -1,16 +1,12 @@
 {
     "samples": {
-        "sample1": {
-            "pacbio-hifi": [
-                "yeat/tests/data/ecoli.fastq.gz"
-            ]
-        },
-        "sample2": {
-            "paired": [
-                "yeat/tests/data/short_reads_1.fastq.gz",
-                "yeat/tests/data/short_reads_2.fastq.gz"
-            ]
-        }
+        "sample1": [
+            "yeat/tests/data/ecoli.fastq.gz"
+        ],
+        "sample2": [
+            "yeat/tests/data/short_reads_1.fastq.gz",
+            "yeat/tests/data/short_reads_2.fastq.gz"
+        ]
     },
     "assemblers": [
         {
