--- a/yeat/tests/data/configs/paired.cfg
+++ b/yeat/tests/data/configs/paired.cfg
@@ -1,17 +1,13 @@
 {
     "samples": {
-        "sample1": {
-            "paired": [
-                "yeat/tests/data/short_reads_1.fastq.gz",
-                "yeat/tests/data/short_reads_2.fastq.gz"
-            ]
-        },
-        "sample2": {
-            "paired": [
-                "yeat/tests/data/Animal_289_R1.fq.gz",
-                "yeat/tests/data/Animal_289_R2.fq.gz"
-            ]
-        }
+        "sample1": [
+            "yeat/tests/data/short_reads_1.fastq.gz",
+            "yeat/tests/data/short_reads_2.fastq.gz"
+        ],
+        "sample2": [
+            "yeat/tests/data/Animal_289_R1.fq.gz",
+            "yeat/tests/data/Animal_289_R2.fq.gz"
+        ]
     },
     "assemblers": [
         {
