--- a/yeat/tests/data/configs/flye.cfg
+++ b/yeat/tests/data/configs/flye.cfg
@@ -1,10 +1,8 @@
 {
     "samples": {
-        "sample1": {
-            "pacbio-hifi": [
-                "yeat/tests/data/ecoli.fastq.gz"
-            ]
-        }
+        "sample1": [
+            "yeat/tests/data/ecoli.fastq.gz"
+        ]
     },
     "assemblers": [
         {
