--- a/yeat/tests/data/configs/megahit.cfg
+++ b/yeat/tests/data/configs/megahit.cfg
@@ -1,11 +1,9 @@
 {
     "samples": {
-        "sample1": {
-            "paired": [
-                "yeat/tests/data/short_reads_1.fastq.gz",
-                "yeat/tests/data/short_reads_2.fastq.gz"
-            ]
-        }
+        "sample1": [
+            "yeat/tests/data/short_reads_1.fastq.gz",
+            "yeat/tests/data/short_reads_2.fastq.gz"
+        ]
     },
     "assemblers": [
         {
