--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,5 @@ markers =
     long: long running tests
     hifi: pacbio hifi-reads tests
     nano: oxford nanopore-reads tests
+filterwarnings =
+    ignore::DeprecationWarning:ratelimiter.*
