--- a/yeat/tests/data/configs/meta.cfg
+++ b/yeat/tests/data/configs/meta.cfg
@@ -8,9 +8,17 @@
     },
     "assemblers": [
         {
-            "label": "metaFlye-default",
+            "label": "metaflye-default",
             "algorithm": "flye",
             "extra_args": "--meta",
+            "samples": [
+                "zymoBIOMICS_D6331"
+            ]
+        },
+        {
+            "label": "hifiasm-meta-default",
+            "algorithm": "hifiasm-meta",
+            "extra_args": "",
             "samples": [
                 "zymoBIOMICS_D6331"
             ]
