--- a/yeat/tests/data/configs/paired.cfg
+++ b/yeat/tests/data/configs/paired.cfg
@@ -15,7 +15,7 @@
     },
     "assemblers": [
         {
-            "label": "default_spades",
+            "label": "spades-default",
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
@@ -24,19 +24,21 @@
             ]
         },
         {
-            "label": "default_megahit",
+            "label": "megahit-default",
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
+                "sample1",
                 "sample2"
             ]
         },
         {
-            "label": "Shigella_sonnei_plasmids",
+            "label": "unicycler-default",
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
-                "sample1"
+                "sample1",
+                "sample2"
             ]
         }
     ]
