--- a/yeat/tests/data/configs/hifi.cfg
+++ b/yeat/tests/data/configs/hifi.cfg
@@ -7,7 +7,7 @@
         },
         "chr11-2M": {
             "pacbio-hifi": [
-                "yeat/tests/data/chr11-2M.fa.gz"
+                "yeat/tests/data/chr11-2M.fq.gz"
             ]
         }
     },
