first commit; saving work

--- a/yeat/tests/data/configs/hifi.cfg
+++ b/yeat/tests/data/configs/hifi.cfg
@@ -35,6 +35,14 @@
             "samples": [
                 "chr11-2M"
             ]
+        },
+        {
+            "label": "unicycler-default",
+            "algorithm": "unicycler",
+            "extra_args": "",
+            "samples": [
+                "WGS_of_E._coli_K12_with_PacBio_HiFi"
+            ]
         }
     ]
 }
