--- a/yeat/tests/data/configs/ont.cfg
+++ b/yeat/tests/data/configs/ont.cfg
@@ -22,6 +22,14 @@
             "samples": [
                 "Ecoli_K12_MG1655_R10.3_HAC"
             ]
+        },
+        {
+            "label": "unicycler-default",
+            "algorithm": "unicycler",
+            "extra_args": "",
+            "samples": [
+                "Ecoli_K12_MG1655_R10.3_HAC"
+            ]
         }
     ]
 }
